Được tạo bằng Colaboratory

--- a/titanic_classification.ipynb
+++ b/titanic_classification.ipynb
@@ -6,7 +6,7 @@
       "name": "titanic classification.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNsYVWets5pMBTYCxUStVGl",
+      "authorship_tag": "ABX9TyMsph8ijD1Z3jHRny50ljWK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,6 +48,7 @@
         }
       },
       "source": [
+        "#load train data\n",
         "data_train = pd.read_csv('train.csv')\n",
         "data_train.head()"
       ],
@@ -198,6 +199,7 @@
         }
       },
       "source": [
+        "#load test data\n",
         "data_test = pd.read_csv('test.csv')\n",
         "data_test.head()"
       ],
@@ -342,7 +344,7 @@
         }
       },
       "source": [
-        "data_train.info()"
+        "data_train.info() # train data info"
       ],
       "execution_count": null,
       "outputs": [
@@ -384,7 +386,7 @@
         }
       },
       "source": [
-        "data_test.info()"
+        "data_test.info() # test data info"
       ],
       "execution_count": null,
       "outputs": [
@@ -425,7 +427,7 @@
         }
       },
       "source": [
-        "data_train.isnull().sum()"
+        "data_train.isnull().sum() # count null value of each field in data train "
       ],
       "execution_count": null,
       "outputs": [
@@ -466,7 +468,7 @@
         }
       },
       "source": [
-        "data_test.isnull().sum()"
+        "data_test.isnull().sum()# count null value of each field in data test "
       ],
       "execution_count": null,
       "outputs": [
@@ -501,11 +503,13 @@
         "id": "WX4ms5KpSMDt"
       },
       "source": [
+        "# fill up missing value in field 'Age' in data train/test with mean value\n",
+        "#train data\n",
         "from sklearn.impute import SimpleImputer\n",
         "imr_train = SimpleImputer(missing_values=np.nan, strategy='mean')\n",
         "imr_train = imr_train.fit(data_train[['Age']])\n",
         "data_train[['Age']] = imr_train.transform(data_train[['Age']]).ravel()\n",
-        "\n",
+        "#test data\n",
         "imr_test = SimpleImputer(missing_values=np.nan, strategy='mean')\n",
         "imr_test = imr_test.fit(data_test[['Age']])\n",
         "data_test[['Age']] = imr_test.transform(data_test[['Age']]).ravel()"
@@ -524,7 +528,7 @@
         }
       },
       "source": [
-        "data_train['Age'].isnull().sum()"
+        "data_train['Age'].isnull().sum() # check null "
       ],
       "execution_count": null,
       "outputs": [
@@ -553,7 +557,7 @@
         }
       },
       "source": [
-        "data_test['Age'].isnull().sum()"
+        "data_test['Age'].isnull().sum() # check null "
       ],
       "execution_count": null,
       "outputs": [
@@ -582,7 +586,7 @@
         }
       },
       "source": [
-        "data_train['Embarked'].value_counts()"
+        "data_train['Embarked'].value_counts() # unique value of field 'embarked' (S, C, Q)"
       ],
       "execution_count": null,
       "outputs": [
@@ -614,6 +618,7 @@
         }
       },
       "source": [
+        "# fill up missing value in field 'embarked' with value 'S' (data_train['embark].mode())\n",
         "data_train['Embarked'].fillna(\"S\", inplace=True)\n",
         "data_train['Embarked'].value_counts()"
       ],
@@ -647,7 +652,7 @@
         }
       },
       "source": [
-        "data_test['Fare'].fillna(data_test['Fare'].mean(), inplace = True)\n",
+        "data_test['Fare'].fillna(data_test['Fare'].mean(), inplace = True) # fill up missing value in 'fare' field with mean value\n",
         "data_test['Fare'].isnull().sum()"
       ],
       "execution_count": null,
@@ -677,7 +682,7 @@
         }
       },
       "source": [
-        "data_train = data_train.drop(['PassengerId','Cabin', 'Ticket', 'Name'], axis = 1)\n",
+        "data_train = data_train.drop(['PassengerId','Cabin', 'Ticket', 'Name'], axis = 1) # drop columns/fields 'passenger', 'cabin', 'ticket', 'name'\n",
         "data_train.info()"
       ],
       "execution_count": null,
@@ -716,8 +721,8 @@
         }
       },
       "source": [
-        "passengerId_test_data = data_test['PassengerId']\n",
-        "data_test = data_test.drop(['PassengerId', 'Ticket', 'Name', 'Cabin'], axis = 1)\n",
+        "passengerId_test_data = data_test['PassengerId'] # get column passengerId in data test\n",
+        "data_test = data_test.drop(['PassengerId', 'Ticket', 'Name', 'Cabin'], axis = 1) # drop columns/fields 'passenger', 'cabin', 'ticket', 'name'\n",
         "data_test.info()"
       ],
       "execution_count": null,
@@ -755,7 +760,7 @@
         }
       },
       "source": [
-        "#encoder\n",
+        "#encode categorical data in train data (sex, embarked)\n",
         "from sklearn.preprocessing import LabelEncoder\n",
         "labelencoder_sex_Train = LabelEncoder()\n",
         "data_train[['Sex']] = labelencoder_sex_Train.fit_transform(data_train[['Sex']].astype('str'))\n",
@@ -894,6 +899,7 @@
         }
       },
       "source": [
+        "#encode categorical data in test data (sex, embarked)\n",
         "labelencoder_sex_Test = LabelEncoder()\n",
         "data_test[['Sex']] = labelencoder_sex_Test.fit_transform(data_test[['Sex']].astype('str'))\n",
         "\n",
@@ -1033,7 +1039,7 @@
         "id": "VLmajmcbUJWz"
       },
       "source": [
-        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.model_selection import train_test_split # split data 80% train 20% test\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2)"
       ],
       "execution_count": null,
@@ -1050,7 +1056,7 @@
         }
       },
       "source": [
-        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.linear_model import LogisticRegression # using logistic regresstion for train model\n",
         "\n",
         "train_model = LogisticRegression()\n",
         "lr = train_model.fit(X_train, y_train)"
@@ -1078,9 +1084,9 @@
         }
       },
       "source": [
-        "y_predict = train_model.predict(X_test)\n",
+        "y_predict = train_model.predict(X_test)#predict label X_test data\n",
         "\n",
-        "predict_set = pd.DataFrame({'predicted' : y_predict, 'actural' : y_test['Survived']});\n",
+        "predict_set = pd.DataFrame({'predicted' : y_predict, 'actural' : y_test['Survived']});#compare predict with actural label\n",
         "predict_set.head()"
       ],
       "execution_count": null,
@@ -1180,7 +1186,7 @@
         "    'Survived' : data_test_predict\n",
         "})\n",
         "\n",
-        "submit_file.to_csv('predict_data_submit.csv', index = False)"
+        "submit_file.to_csv('predict_data_submit.csv', index = False)#write submit file to predict_data_submit.csv"
       ],
       "execution_count": null,
       "outputs": []
@@ -1197,7 +1203,7 @@
       },
       "source": [
         "from sklearn.metrics import classification_report\n",
-        "print(classification_report(y_predict, y_test['Survived']))"
+        "print(classification_report(y_predict, y_test['Survived']))#classification result"
       ],
       "execution_count": 65,
       "outputs": [
@@ -1230,7 +1236,7 @@
       },
       "source": [
         "from sklearn.metrics import accuracy_score\n",
-        "print('accuracy: {0}'.format(accuracy_score(y_predict, y_test['Survived'])))"
+        "print('accuracy: {0}'.format(accuracy_score(y_predict, y_test['Survived'])))#accuracy"
       ],
       "execution_count": 70,
       "outputs": [
